--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
   </style>
 </head>
 <body>
+  <div class="imgSection">
+    <img src="image-product-mobile.jpg" alt="mobile image product">
+  </div>
 
-  Preview
+  <div class="infoSection">
+    <p>Preview</p>
+    <h1>Gabrielle Essence Eau De Parfum</h1>
+    <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.</p>
+    <div class="prices">
+      <div class="price1">$149.99</div>
+      <div class="price2">$169.99</div>
+    </div>
+    <button class="addToCart">Add to Cart</button>
 
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
