--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="index.css">
   
   <title>Frontend Mentor | Product preview card component</title>
 
@@ -16,7 +17,7 @@
 </head>
 <body>
   <div class="imgSection">
-    <img src="image-product-mobile.jpg" alt="mobile image product">
+    <img src="images/image-product-mobile.jpg" alt="mobile image product">
   </div>
 
   <div class="infoSection">
